--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: nolecler <nolecler@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/08/11 15:25:07 by nolecler          #+#    #+#              #
-#    Updated: 2025/08/11 15:26:16 by nolecler         ###   ########.fr        #
+#    Updated: 2025/08/12 16:03:05 by nolecler         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,6 +19,8 @@ CFLAGS = -Wall -Werror -Wextra -Iincludes -std=c++98
 SRC := src/Animal.cpp \
 		src/Cat.cpp \
 		src/Dog.cpp \
+		src/WrongAnimal.cpp \
+		src/WrongCat.cpp \
 		main.cpp
 
 OBJ := $(SRC:.cpp=.o)
